將jquery cdn 改成 https

--- a/website/52hr191112/index.html
+++ b/website/52hr191112/index.html
@@ -20,7 +20,7 @@
 <title>小六升私中-機密重點52小時</title>
 <link rel="shoutcut icon" href="image/shortcut.ico" />
 <link href="css/index.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script>
     $(document).ready(function(){
     $("#reg-open").click(function(){
