--- a/website/52hr191112/page-math-point.html
+++ b/website/52hr191112/page-math-point.html
@@ -23,7 +23,7 @@
 <link href="css/page.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="css/font-awesome.css">
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script>
 $(document).ready(function(){
 $(".video-image img").click(function(){
