更換學習王官網更換學員獎勵網址

--- a/website/study123-2020/index.html
+++ b/website/study123-2020/index.html
@@ -123,7 +123,7 @@
 <a href="page_service_1.html"><div class="bottom_btn_choice">作文批閱</div></a>
 <a href="page_service_2.html"><div class="bottom_btn_choice">楷模書院</div></a>
 <a href="https://www.smartstudy.tw/" target="_blank"><div class="bottom_btn_choice">行動APP</div></a>
-<a href="http://12basic.study123.com.tw/composition/reward/reward.html" target="_blank"><div class="bottom_btn_choice">學員獎勵</div></a>
+<a href="https://12basic.study123.com.tw/study_reward/page.html" target="_blank"><div class="bottom_btn_choice">學員獎勵</div></a>
 </div>
 </div>    
     
