--- a/website/study123-2020/page_product_4.html
+++ b/website/study123-2020/page_product_4.html
@@ -119,7 +119,7 @@
 <a href="page_service_1.html"><div class="bottom_btn_choice">作文批閱</div></a>
 <a href="page_service_2.html"><div class="bottom_btn_choice">楷模書院</div></a>
 <a href="https://www.smartstudy.tw/" target="_blank"><div class="bottom_btn_choice">行動APP</div></a>
-<a href="http://12basic.study123.com.tw/composition/reward/reward.html" target="_blank"><div class="bottom_btn_choice">學員獎勵</div></a>
+<a href="https://12basic.study123.com.tw/study_reward/page.html" target="_blank"><div class="bottom_btn_choice">學員獎勵</div></a>
 </div>
 </div>    
     
@@ -414,7 +414,7 @@
 <div class="footer_gray_link_link"><a href="page_service_1.html">作文批閱</a></div>
 <div class="footer_gray_link_link"><a href="page_service_2.html">楷模書院</a></div>
 <div class="footer_gray_link_link"><a href="https://www.smartstudy.tw/" target="_blank">行動APP</a></div>
-<div class="footer_gray_link_link"><a href="http://12basic.study123.com.tw/composition/reward/reward.html" target="_blank">學員獎勵</a></div>
+<div class="footer_gray_link_link"><a href="https://12basic.study123.com.tw/study_reward/page.html" target="_blank">學員獎勵</a></div>
 </div>
 <div class="footer_gray_link_container">
 <div class="footer_gray_link_title">聯絡洽詢</div>
