--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta name="author" content="Joe Wang">
 <meta name="copyright" content="Copyright © Joe Wang All Rights Reserved.">  
-<meta name="description" content="您好，我是網頁設計師Joe，專長視覺設計、網頁建置、介面流程規劃，歡迎點進作品集網站了解更多:)">  
+<meta name="description" content="您好，我是網頁設計師Joe，專長視覺設計、網頁建置、介面流程規劃，歡迎點進作品集網站了解更多。:)">  
 <meta itemprop="name" content="Joe's Works">
 <meta itemprop="image" content="image/og-img.jpg">
 <meta itemprop="description" content="您好，我是網頁設計師Joe，專長視覺設計、網頁建置、介面流程規劃，歡迎點進作品集網站了解更多:)">
