change jqury cdn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen"/>
 <link href="css/main20191112.css" rel="stylesheet" type="text/css">
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="https://www.w3school.com.cn/jquery/jquery.js"></script>
 <script defer src="js/jquery.flexslider.js"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
