--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div id="tab1" class="works_item_area">
     
 <div class="works_item_container">
-<a href="website/study123-2020/index.html" target="_blank">  
+<a href="website/study123-2020/index.html" target="_blank" rolr="">  
 <div class="works_item">
 <div class="works_item_pic"><img src="image/p10s.jpg" alt=""/><div class="works_item_sq"><img src="image/link_icon.png" alt=""/></div></div>
 <div class="works_item_bar"><span>學習王官網(RWD)</span></div>
