--- a/website/istudy_page/page.html
+++ b/website/istudy_page/page.html
@@ -25,7 +25,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="css/font-awesome.css">
 <link rel="shoutcut icon" href="image/shortcut_i.ico"/>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 
     <!--<link rel="stylesheet" href="assets/css/docs.theme.min.css">-->
 
