個人簡介文字修改

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="intor_text_container_2 intor_text_dis_1">
 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
 <div class="intor_text">
-視覺表達上，<span>著重影像合成的發揮，也具有扁平化卡通風格</span>之表現能力，能全面的達成各類視覺需求。網頁建置上，<span>擁有Html.Css技術完成RWD網站建置能力</span>。在<span>UI、UX領域持續研究學習，工作中也有流程規劃之經驗</span>。
+使用<span>Photoshop、Adobe Xd、Figma、illustrator</span>製作網頁、各類型介面之視覺設計；網頁建置能依<span>Boostrap概念為基礎並能運用Html5.CSS3建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置APP能利用<span>IOS、Google設計規範</span>為基礎設計介面，了解使用者體驗相關知識。
 </div>
 </div>
 </div>
@@ -98,7 +98,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
 <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
 <div class="intor_text">
-視覺表達上，<span>著重影像合成的發揮，也具有扁平化卡通風格之表現能力</span>，能全面的達成各類設計需求。網頁建置上，<span>擁有Html.Css技術完成RWD網站建置能力</span>。在<span>UI、UX領域持續研究學習，工作中也有流程規劃之經驗</span>。
+使用<span>Photoshop、Adobe Xd、Figma、illustrator</span>製作網頁、各類型介面之視覺設計；網頁建置能依<span>Boostrap概念為基礎並能運用Html5.CSS3建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置APP能利用<span>IOS、Google設計規範</span>為基礎設計介面，了解使用者體驗相關知識。
 </div>
 </div>
 
