--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="https://www.w3school.com.cn/jquery/jquery.js"></script>
     <script defer src="js/jquery.flexslider.js"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134608227-2"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -40,6 +40,7 @@
         gtag('config', 'UA-134608227-2');
 
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- Google Tag Manager -->
     <script>
         (function(w, d, s, l, i) {
