更換GA4追蹤碼

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <script type="text/javascript" src="https://www.w3school.com.cn/jquery/jquery.js"></script>
     <script defer src="js/jquery.flexslider.js"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134608227-2"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5C5BZ9NLJ0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -37,29 +37,9 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'UA-134608227-2');
+        gtag('config', 'G-5C5BZ9NLJ0');
 
     </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- Google Tag Manager -->
-    <script>
-        (function(w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-T99CDB2');
-
-    </script>
-    <!-- End Google Tag Manager -->
 
     <title>Joe's Works</title>
 
