ga4追蹤碼安裝

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="https://www.w3school.com.cn/jquery/jquery.js"></script>
     <script defer src="js/jquery.flexslider.js"></script>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5C5BZ9NLJ0"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -40,13 +40,35 @@
         gtag('config', 'G-5C5BZ9NLJ0');
 
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NCFK3CZ');
+
+    </script>
+    <!-- End Google Tag Manager -->
 
     <title>Joe's Works</title>
 
 </head>
 
 <body>
-
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCFK3CZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="top_bar_area">
         <div class="top_bar_container">
             <div class="top_bar_text top_bar_left"><i class="fa fa-heart"></i>歡迎來到我的作品集網頁</div>
