--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                 <div id="tab1" class="works_item_area">
 
-                    <div id="t1_1" class="works_item_container">
+                    <div id="t1_1" class="works_item_container" href="#t1">
                         <a href="website/study123-2020/index.html" target="_blank" role="button">
                             <div class="works_item">
                                 <div class="works_item_pic"><img src="image/p10s.jpg" alt="" />
