--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                 <div id="tab1" class="works_item_area">
 
-                    <div id="t1_1" class="works_item_container" href="#t1">
+                    <div id="t1" class="works_item_container" href="#t1">
                         <a href="website/study123-2020/index.html" target="_blank" role="button">
                             <div class="works_item">
                                 <div class="works_item_pic"><img src="image/p10s.jpg" alt="" />
@@ -186,7 +186,7 @@
                         </a>
                     </div>
 
-                    <div id="t1_3" class="works_item_container">
+                    <div id="t1" class="works_item_container" href="#t1">
                         <div id="p9" class="works_item item_show_pic" role="button">
                             <div class="works_item_pic"><img src="image/p9s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
