--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 
                 <div id="tab1" class="works_item_area">
 
-                    <div id="t1" class="works_item_container" href="#t1">
+                    <div class="works_item_container">
                         <a href="website/study123-2020/index.html" target="_blank" role="button">
                             <div class="works_item">
-                                <div class="works_item_pic"><img src="image/p10s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t1_1" src="image/p10s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>學習王官網(RWD)</span></div>
@@ -175,10 +175,10 @@
                         </a>
                     </div>
 
-                    <div id="t1_2" class="works_item_container">
+                    <div class="works_item_container">
                         <a href="website/tutor_web/index.html" target="_blank" role="button">
                             <div class="works_item">
-                                <div class="works_item_pic"><img src="image/p11s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t1_2" src="image/p11s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>好師到官網(RWD)</span></div>
@@ -186,9 +186,9 @@
                         </a>
                     </div>
 
-                    <div id="t1" class="works_item_container" href="#t1">
+                    <div class="works_item_container">
                         <div id="p9" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img src="image/p9s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t1_3" src="image/p9s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>Beats官網設計</span></div>
