--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                         </div>
                     </div>
 
-                    <div id="t1_4" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="p12" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img src="image/p12s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t1_4" src="image/p12s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>Suzuki產品官網設計</span></div>
@@ -207,7 +207,7 @@
                     <div id="t1_5" class="works_item_container">
                         <a href="website/danny_kids/index.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img src="image/r5s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t1_5" src="image/r5s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>教材產品官網(RWD)</span></div>
@@ -215,19 +215,19 @@
                         </a>
                     </div>
 
-                    <div id="t1_6" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="p7" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img src="image/p7s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t1_6" src="image/p7s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>建築公司官網設計</span></div>
                         </div>
                     </div>
 
-                    <div id="t1_7" class="works_item_container">
+                    <div class="works_item_container">
                         <a href="website/smeg-a/index.html" target="_blank" role="button">
                             <div class="works_item">
-                                <div class="works_item_pic"><img src="image/w2s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t1_7" src="image/w2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>政府機關官網(RWD)</span></div>
@@ -241,51 +241,51 @@
 
 
 
-                    <div id="t2_1" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="p6" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/p6s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t2_1" src="image/p6s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>網路活動視覺</span></div>
                         </div>
                     </div>
-                    <div id="t2_2" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="p4" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/p4s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t2_2" src="image/p4s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>產品推廣網頁</span></div>
                         </div>
                     </div>
-                    <div id="t2_3" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="p3" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/p3s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t2_3" src="image/p3s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>產品推廣網頁</span></div>
                         </div>
                     </div>
-                    <div id="t2_4" class="works_item_container">
+                    <div class="works_item_container">
                         <a href="website/istudy_page/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img src="image/w8s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t2_4" src="image/w8s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>一頁式廣告頁(RWD)</span></div>
                             </div>
                         </a>
                     </div>
-                    <div id="t2_5" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="p1" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/p1s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t2_5" src="image/p1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>3折DM</span></div>
                         </div>
                     </div>
-                    <div id="t2_6" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="p2" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/p2s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t2_6" src="image/p2s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>海報設計</span></div>
@@ -293,41 +293,41 @@
                     </div>
                 </div>
                 <div id="tab3" class="works_item_area">
-                    <div id="t3_1" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="s1" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/s1s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_1" src="image/s1s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>影像合成</span></div>
                         </div>
                     </div>
-                    <div id="t3_2" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="s2" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/s2s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_2" src="image/s2s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>影像合成</span></div>
                         </div>
                     </div>
-                    <div id="t3_3" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="s3" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/s3s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_3" src="image/s3s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>小鋼琴-物件製作</span></div>
                         </div>
                     </div>
-                    <div id="t3_4" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="s11" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/s11s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_4" src="image/s11s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>產品修圖</span></div>
                         </div>
                     </div>
-                    <div id="t3_5" class="works_item_container">
+                    <div class="works_item_container">
                         <div id="s10" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img src="image/s10s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t3_5" src="image/s10s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>貓頭鷹-角色設計</span></div>
@@ -335,10 +335,10 @@
                     </div>
                 </div>
                 <div id="tab4" class="works_item_area">
-                    <div id="t4_1" class="works_item_container">
+                    <div class="works_item_container">
                         <a href="website/funtogo1116/page.html" target="_blank">
                             <div class="works_item">
-                                <div class="works_item_pic"><img src="image/a2s.jpg" alt="" />
+                                <div class="works_item_pic"><img id="t4_1" src="image/a2s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>社群APP設計</span></div>
