更改提示文字內容

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 </div>
             </div>
         </div>
-        <div class="works_area_tip">作品集所見內容皆為獨立製作</div>
+        <div class="works_area_tip">製作風格非僅限於作品集之作品</div>
     </div>
 
     <div class="footer_container footer_bottom">
