--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <!-- End Google Tag Manager (noscript) -->
     <div class="top_bar_area">
         <div class="top_bar_container">
-            <div class="top_bar_text top_bar_left"><i class="fa fa-heart"></i>歡迎來到我的作品集網頁</div>
+            <div class="top_bar_text top_bar_left"><i class="fa fa-heart"></i>您好，歡迎您的拜訪:)</div>
             <div class="top_bar_logo"><img src="image/logo.jpg" alt="joe's works" /></div>
-            <div class="top_bar_text top_bar_right"><i class="fa fa-desktop"></i><i class="fa fa-tablet"></i>網頁為RWD響應式建置</div>
+            <div class="top_bar_text top_bar_right"><i class="fa fa-desktop"></i><i class="fa fa-tablet"></i>網頁為響應式建置</div>
         </div>
     </div>
 
