修改自我介紹

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    嘉義人，桃園完成大學學業後至台北工作，先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技負責網頁相關工作，至今<span>已有七年經驗</span>，現任學習王科技網頁設計師，期許未來能在設計領域中能有向上挑戰和發揮的機會。
+                    嘉義人，桃園完成大學學業後至台北工作，先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技負責網頁相關工作，至今<span>已有七年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
