--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="banner_big_container">
+    <div class="banner_big_container" style="display:none;">
         <section class="slider">
             <div class="flexslider">
                 <ul class="slides">
