修改軟體官網設計圖

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </div>
 
                     <div class="works_item_container">
-                        <div id="p13" class="works_item item_show_pic" role="button">
+                        <div id="p13_2" class="works_item item_show_pic" role="button">
                             <div class="works_item_pic"><img id="t1_3" src="image/p13s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
