新增旅遊官網設計 作品順序修改

--- a/index.html
+++ b/index.html
@@ -167,28 +167,17 @@
                 <div id="tab1" class="works_item_area">
 
                     <div class="works_item_container">
-                        <a href="website/study123-2020/index.html" target="_blank" role="button">
-                            <div class="works_item">
-                                <div class="works_item_pic"><img id="t1_1" src="image/p10s.jpg" alt="" />
-                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
-                                </div>
-                                <div class="works_item_bar"><span>學習王官網(RWD)</span></div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="works_item_container">
-                        <div id="p14" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_2" src="image/p14s.jpg" alt="" />
+                        <div id="p15" class="works_item item_show_pic" role="button">
+                            <div class="works_item_pic"><img id="t1_1" src="image/p15s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>鯊魚工廠官網設計</span></div>
+                            <div class="works_item_bar"><span>旅遊網設計</span></div>
                         </div>
                     </div>
 
                     <div class="works_item_container">
                         <div id="p13_2" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_3" src="image/p13s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t1_2" src="image/p13s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>軟體產品官網設計</span></div>
@@ -197,10 +186,19 @@
 
                     <div class="works_item_container">
                         <div id="p9" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_4" src="image/p9s.jpg" alt="" />
+                            <div class="works_item_pic"><img id="t1_3" src="image/p9s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>Beats官網設計</span></div>
+                        </div>
+                    </div>
+
+                    <div class="works_item_container">
+                        <div id="p14" class="works_item item_show_pic" role="button">
+                            <div class="works_item_pic"><img id="t1_4" src="image/p14s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>鯊魚工廠官網設計</span></div>
                         </div>
                     </div>
 
