新增派工系統

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="works_btn works_btn_active"><a href="#tab1">網頁類型</a></div>
                     <div class="works_btn"><a href="#tab2">行銷類型</a></div>
                     <div class="works_btn"><a href="#tab3">電腦繪圖</a></div>
-                    <div class="works_btn"><a href="#tab4">APP UI.UX</a></div>
+                    <div class="works_btn"><a href="#tab4">介面設計</a></div>
                 </div>
             </div>
             <div>
@@ -167,7 +167,7 @@
                 <div id="tab1" class="works_item_area">
 
                     <div class="works_item_container">
-                        <div id="p15" class="works_item item_show_pic" role="button">
+                        <div id="p15_2" class="works_item item_show_pic" role="button">
                             <div class="works_item_pic"><img id="t1_1" src="image/p15s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
@@ -351,6 +351,16 @@
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
                                 <div class="works_item_bar"><span>機票訂購APP設計(ios)</span></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="works_item_container">
+                        <a href="website/road_repair/page.html" target="_blank">
+                            <div class="works_item">
+                                <div class="works_item_pic"><img id="t4_3" src="image/a4s.jpg" alt="" />
+                                    <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
+                                </div>
+                                <div class="works_item_bar"><span>道路維護派工系統</span></div>
                             </div>
                         </a>
                     </div>
