派工系統圖修改0307

--- a/website/road_repair/page.html
+++ b/website/road_repair/page.html
@@ -28,7 +28,7 @@
 
 <body>
 
-<div class="page_container"><picture><img src="image/p1_1920.jpg" alt=""/></picture></div>
+<div class="page_container"><picture><img src="image/p1_1920.png" alt=""/></picture></div>
 <div class="page_container"><picture><img src="image/p2_1920.jpg" alt=""/></picture></div>
 <div class="page_container"><picture><img src="image/p3_1920.jpg" alt=""/></picture></div>
 <div class="page_container"><picture><img src="image/p4_1920.jpg" alt=""/></picture></div>
