--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="works_btn_area">
                 <div class="works_btn_bar"><span>網頁類型</span><i class="fa fa-sort-desc"></i></div>
                 <div class="works_btn_container">
-                    <div class="works_btn works_btn_active"><a href="#tab1">網頁類型</a></div>
+                    <div class="works_btn works_btn_active"><a href="#tab1">官網類型</a></div>
                     <div class="works_btn"><a href="#tab2">行銷類型</a></div>
                     <div class="works_btn"><a href="#tab3">電腦繪圖</a></div>
                     <div class="works_btn"><a href="#tab4">介面設計</a></div>
@@ -167,20 +167,20 @@
                 <div id="tab1" class="works_item_area">
 
                     <div class="works_item_container">
-                        <div id="p15_2" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_1" src="image/p15s.jpg" alt="" />
+                        <div id="p16" class="works_item item_show_pic" role="button">
+                            <div class="works_item_pic"><img id="t1_1" src="image/p16s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>旅遊網設計</span></div>
+                            <div class="works_item_bar"><span>永豐保險代理</span></div>
                         </div>
                     </div>
 
                     <div class="works_item_container">
-                        <div id="p13_2" class="works_item item_show_pic" role="button">
-                            <div class="works_item_pic"><img id="t1_2" src="image/p13s.jpg" alt="" />
+                        <div id="p17" class="works_item item_show_pic" role="button">
+                            <div class="works_item_pic"><img id="t1_2" src="image/p17s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>軟體產品官網設計</span></div>
+                            <div class="works_item_bar"><span>泰安產物保險</span></div>
                         </div>
                     </div>
 
@@ -246,8 +246,8 @@
                         </a>
                     </div>
                     <div class="works_item_container">
-                        <div id="p3" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t2_3" src="image/p3s.jpg" alt="" />
+                        <div id="p4" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t2_3" src="image/p4s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
                             <div class="works_item_bar"><span>產品推廣網頁</span></div>
@@ -323,11 +323,11 @@
                         </div>
                     </div>
                     <div class="works_item_container">
-                        <div id="s13" class="works_item item_show_pic">
-                            <div class="works_item_pic"><img id="t3_7" src="image/s13s.jpg" alt="" />
+                        <div id="s5" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t3_7" src="image/s5s.jpg" alt="" />
                                 <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
                             </div>
-                            <div class="works_item_bar"><span>2.5D圖像製作</span></div>
+                            <div class="works_item_bar"><span>小雞繪圖</span></div>
                         </div>
                     </div>
 
@@ -360,9 +360,25 @@
                                 <div class="works_item_pic"><img id="t4_3" src="image/a4s.jpg" alt="" />
                                     <div class="works_item_sq"><img src="image/link_icon.png" alt="" /></div>
                                 </div>
-                                <div class="works_item_bar"><span>道路維護派工系統</span></div>
+                                <div class="works_item_bar"><span>系統介面</span></div>
                             </div>
                         </a>
+                    </div>
+                    <div class="works_item_container">
+                        <div id="y1" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t4_4" src="image/y1s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>台新風險管理系統</span></div>
+                        </div>
+                    </div>
+                    <div class="works_item_container">
+                        <div id="y2" class="works_item item_show_pic">
+                            <div class="works_item_pic"><img id="t4_5" src="image/y2s.jpg" alt="" />
+                                <div class="works_item_sq"><img src="image/check_icon.png" alt="" /></div>
+                            </div>
+                            <div class="works_item_bar"><span>永豐保代管理系統</span></div>
+                        </div>
                     </div>
                 </div>
 
