--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
             <div class="intor_text_container_1 intor_text_dis_1">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">&frasl;</span>10<span class="intor_symbol_1">&frasl;</span>15，銘傳數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技負責網頁相關工作，至今<span>已有七年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。<br />
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，目前在始祖鳥科技任職UIUX設計師，至今<span>已有九年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。<br />
                     使用<span>Photoshop、Adobe Xd、Figma、illustrator</span>製作網頁、各類型介面之視覺設計；
                 </div>
             </div>
             <div class="intor_text_container_1 intor_text_dis_2" style="padding-top:0px;">
                 <div class="intor_text_name">王俊淵，76<span class="intor_symbol_1">.</span>10<span class="intor_symbol_1">.</span>15<br />銘傳大學數位媒體設計</div>
                 <div class="intor_text">
-                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技負責網頁相關工作，至今<span>已有6-7年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。
+                    先後在奧爾多媒體、大禹行銷、嘉聯科技、雷普科技、學習王科技負責網頁相關工作，目前在始祖鳥科技任職UIUX設計師，至今<span>已有九年經驗</span>，期許未來能在設計領域中能有向上挑戰和發揮的機會。
                 </div>
             </div>
             <div class="intor_text_container_2 intor_text_dis_1">
@@ -143,7 +143,7 @@
         <div class="intor_text_container_2 intor_text_dis_2" style="float:none;">
             <div class="intor_text_name">專長視覺設計、UI<span class="intor_symbol_2">&amp;</span>UX設計、網頁建置</div>
             <div class="intor_text" style="word-break:break-all">
-                使用<span>Photoshop、Adobe Xd、Figma、illustrator</span>製作網頁、各類型介面之視覺設計；
+                使用<span>Photoshop、illustrator、Figma</span>製作網頁、各類型介面之視覺設計；
                 網頁建置能依<span>Boostrap概念為基礎並能運用Html5.CSS3.Jquery建置RWD網頁並搭配SCSS</span>增加改版、維護之效率；行動裝置APP能利用<span>IOS、Google設計規範</span>為基礎設計介面，了解使用者體驗相關知識；<span>懂使用Google Analytics、Google tag manager</span>蒐集使用者資料。
             </div>
         </div>
