--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
     <link href="css/main.css" rel="stylesheet" type="text/css">
 
-    <script type="text/javascript" src="https://www.w3school.com.cn/jquery/jquery.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script defer src="js/jquery.flexslider.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics
@@ -225,7 +225,6 @@
                 </div>
 
                 <div id="tab2" class="works_item_area">
-
 
                     <div class="works_item_container">
                         <div id="p6" class="works_item item_show_pic">
