--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
     <link href="css/main.css" rel="stylesheet" type="text/css">
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <!--<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script defer src="js/jquery.flexslider.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics
